--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - WATCHPACK_POLLING=true 
     env_file:
       - ./frontend/.env.local
-    command: sh -c "npm install && npm audit fix && npm run dev"
+    command: sh -c "npm install && npm install axios && npm audit fix && npm run dev"
     networks:
       - app-network
 
