--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/three": "^9.0.0-rc.3",
+    "@react-three/drei": "^10.0.0-rc.2",
+    "@react-three/fiber": "^9.0.0-rc.7",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "lodash": "^4.17.21",
