--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.0.0-rc.7",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.3",
     "lodash": "^4.17.21",
     "next": "15.1.7",
     "react": "^19.0.0",
